# Jot

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  install.sh
.github/workflows/: release-gui.yml  release.yml
bash_commands/: install_jot.sh  install_llm.sh  setup_hook.sh
src/: commands.rs  config.rs  context.rs  lib.rs  main.rs  pid_controller.rs  settings.rs  setup.rs  types.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/jotx-gui/: index.html  package-lock.json  package.json
src-tauri/jotx-gui/src/: App.css  App.tsx
src-tauri/jotx-gui/src/SetupPage/: SetupPage.css  SetupPage.tsx
src-tauri/jotx-gui/src/components/: Home.css  Home.tsx  LLM.css  LLM.tsx  Paths.css  Paths.tsx  PrivacySettings.tsx  Settings.css  Settings.tsx
src-tauri/jotx_gui/: app.js  index.html  paths.json  styles.css
src-tauri/src/: commands.rs  main.rs  setup.rs
src/ask/: ask_handler.rs  fingerprint.rs  intent.rs  mod.rs  search_handler.rs  semantic.rs
src/bash commands/: install_jot.sh  setup_hook.sh
src/clipboard/: clip_mon.rs  mod.rs
src/db/: cache.rs  db_writer.rs  mod.rs
src/db/sample_generator/: mod.rs
src/embeds/: mod.rs
src/llm/: default.rs  handle_llm.rs  manager.rs  mod.rs  prompt.rs
src/managers/: mod.rs  shutdown_manager.rs
src/plugin/: base_plugin.rs  check_plugins.rs  create_plugins.rs  mod.rs  plugin_manager.rs  script_engine.rs  script_plugin.rs  sensitive_info_plugin.rs
src/scripts/: install_jot.sh  install_llm.sh  install_sqlite_vec.sh  setup_hook.sh
src/shell/: mod.rs  shell_mon.rs
