[package]
name = "jotx"
version = "0.1.0"
edition = "2024"

[dependencies]
copypasta = "0.10"
x-win = "5.3.3"
once_cell = "1.19"
clap = { version = "4.5.52", features = ["derive"] }
ctrlc = "3.4"
pid = "4.0"
rusqlite = { version = "0.37", features = ["bundled"] }
fastembed = "5"
console = { version = "0.16", features = ["std"] }
byteorder = "1.5"
dirs = "6.0.0"
dialoguer = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
serde_json = "1.0"
